--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required (VERSION 3.26)
 
+# Define Intercept paths FIRST (before any usage)
+set(INTERCEPT_CLIENT_PATH "${CMAKE_SOURCE_DIR}/intercept/src/client")
+set(INTERCEPT_INCLUDE_PATH "${INTERCEPT_CLIENT_PATH}/headers" "${INTERCEPT_CLIENT_PATH}/headers/shared" "${INTERCEPT_CLIENT_PATH}/headers/client/" "${INTERCEPT_CLIENT_PATH}/headers/client/sqf")
 
 file(GLOB_RECURSE INTERCEPT_PLUGIN_SOURCES *.h *.hpp *.c *.cpp)
 list(FILTER INTERCEPT_PLUGIN_SOURCES EXCLUDE REGEX "/wta/")
@@ -13,8 +16,24 @@ file(GLOB_RECURSE WTA_CORE_SOURCES
   "wta/exec/executor.hpp"
   "wta/orchestrator/*.hpp" "wta/orchestrator/*.cpp"
 )
-add_library(wta_core STATIC ${WTA_CORE_SOURCES})
-target_include_directories(wta_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+# Exclude backup files from compilation
+list(FILTER WTA_CORE_SOURCES EXCLUDE REGEX ".*_backup\\.(cpp|hpp)$")
+# Add protobuf generated sources to wta_core
+add_library(wta_core STATIC ${WTA_CORE_SOURCES} ${PROTO_SRCS} ${PROTO_HDRS})
+
+# 确保 protobuf 代码在编译前生成
+add_dependencies(wta_core generate_proto_cpp)
+
+# Add both local sources, Intercept headers, and protobuf includes to wta_core
+target_include_directories(wta_core PUBLIC 
+  ${CMAKE_CURRENT_SOURCE_DIR}
+  ${INTERCEPT_INCLUDE_PATH}
+  ${CMAKE_BINARY_DIR}  # For generated protobuf headers
+  ${CMAKE_BINARY_DIR}/generated  # For wta_messages.pb.h
+  ${Protobuf_INCLUDE_DIRS}
+)
+# Link protobuf library
+target_link_libraries(wta_core PUBLIC protobuf::libprotobuf)
 
 
 find_package(ZeroMQ QUIET CONFIG)
@@ -48,11 +67,7 @@ target_link_libraries(wta_runtime PUBLIC wta_core)
 
 #----Don't change anything below this line
 
-
-#include the Intercept headers from the submodule
-set(INTERCEPT_CLIENT_PATH "${CMAKE_SOURCE_DIR}/intercept/src/client")
-
-set(INTERCEPT_INCLUDE_PATH "${INTERCEPT_CLIENT_PATH}/headers" "${INTERCEPT_CLIENT_PATH}/headers/shared" "${INTERCEPT_CLIENT_PATH}/headers/client/" "${INTERCEPT_CLIENT_PATH}/headers/client/sqf")
+# INTERCEPT_INCLUDE_PATH already defined at top of file
 
 if(USE_64BIT_BUILD)
     set(INTERCEPT_PLUGIN_NAME "${CMAKE_PROJECT_NAME}_x64")
@@ -75,7 +90,8 @@ SOURCE_GROUP("intercept" FILES ${INTERCEPT_HOST_SOURCES})
 
 add_library( ${INTERCEPT_PLUGIN_NAME} SHARED ${INTERCEPT_PLUGIN_SOURCES} ${INTERCEPT_HOST_SOURCES})
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${INTERCEPT_INCLUDE_PATH})
+# Set include directories for the plugin target
+target_include_directories(${INTERCEPT_PLUGIN_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${INTERCEPT_INCLUDE_PATH})
 
 set_target_properties(${INTERCEPT_PLUGIN_NAME} PROPERTIES PREFIX "")
 set_target_properties(${INTERCEPT_PLUGIN_NAME} PROPERTIES FOLDER "${CMAKE_PROJECT_NAME}")
@@ -85,14 +101,9 @@ target_link_libraries(${INTERCEPT_PLUGIN_NAME} PRIVATE wta_core wta_runtime)
 # Post-build: copy DLL to mod intercept folder (uses MOD_DIR from parent cache)
 add_custom_command(TARGET ${INTERCEPT_PLUGIN_NAME} POST_BUILD
   COMMAND ${CMAKE_COMMAND} -E make_directory "${MOD_DIR}/intercept"
-  COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:${INTERCEPT_PLUGIN_NAME}> "${MOD_DIR}/intercept/$<TARGET_FILE_NAME:${INTERCEPT_PLUGIN_NAME}>"
-  # Copy runtime dependencies from build output directory
-  COMMAND ${CMAKE_COMMAND} -E copy_if_different "$<TARGET_FILE_DIR:${INTERCEPT_PLUGIN_NAME}>/fmtd.dll" "${MOD_DIR}/intercept/"
-  COMMAND ${CMAKE_COMMAND} -E copy_if_different "$<TARGET_FILE_DIR:${INTERCEPT_PLUGIN_NAME}>/glog.dll" "${MOD_DIR}/intercept/" 
-  COMMAND ${CMAKE_COMMAND} -E copy_if_different "$<TARGET_FILE_DIR:${INTERCEPT_PLUGIN_NAME}>/gflags_debug.dll" "${MOD_DIR}/intercept/"
-  COMMAND ${CMAKE_COMMAND} -E copy_if_different "$<TARGET_FILE_DIR:${INTERCEPT_PLUGIN_NAME}>/libzmq-mt-gd-4_3_5.dll" "${MOD_DIR}/intercept/"
-  COMMENT "Copying plugin DLL and dependencies to ${MOD_DIR}/intercept"
-  VERBATIM
+  # Copy all DLLs from runtime output directory
+  COMMAND powershell.exe -NoProfile -Command "Copy-Item -Path '${CMAKE_RUNTIME_OUTPUT_DIRECTORY}*.dll' -Destination '${MOD_DIR}\\intercept\\' -Force"
+  COMMENT "Copying all DLLs from ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} to ${MOD_DIR}/intercept"
 )
 
 if(CMAKE_COMPILER_IS_GNUCXX)
@@ -100,7 +111,8 @@ if(CMAKE_COMPILER_IS_GNUCXX)
 	set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
 	set(CMAKE_SHARED_LINKER_FLAGS "-shared -static-libgcc -static-libstdc++")
 else()
-	set(CMAKE_CXX_FLAGS_DEBUG "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1 /MP /EHsc")
-	set(CMAKE_CXX_FLAGS_RELEASE "/MT /Zi /O2 /Ob1 /EHsc /MP") #with debug info
+	# Add UTF-8 support for MSVC to fix encoding issues in build output
+	set(CMAKE_CXX_FLAGS_DEBUG "/D_DEBUG /MDd /Zi /Ob0 /Od /RTC1 /MP /EHsc /utf-8")
+	set(CMAKE_CXX_FLAGS_RELEASE "/MT /Zi /O2 /Ob1 /EHsc /MP /utf-8") #with debug info
 	set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "/OPT:REF /DEBUG:FULL") 
 endif()
